--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-eslint/eslint-plugin": "^13.5.0",
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
@@ -43,8 +44,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-eslint/eslint-plugin-template": "^13.5.0",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
+    "@ngneat/spectator": "^10.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "eslint": "^8.18.0",
