feat: 🎸 Added Header Component, UI State, Theme Switcher

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "private": true,
   "dependencies": {
     "@angular-eslint/eslint-plugin": "^13.5.0",
+    "@angular-eslint/template-parser": "^13.5.0",
     "@angular/animations": "~13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
@@ -38,6 +39,10 @@
     "@angular/router": "~13.0.0",
     "@datorama/akita": "^7.1.1",
     "@datorama/akita-ngdevtools": "^7.0.0",
+    "@taiga-ui/cdk": "^2.50.0",
+    "@taiga-ui/core": "^2.50.0",
+    "@taiga-ui/icons": "^2.50.0",
+    "@taiga-ui/kit": "^2.50.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -50,6 +55,7 @@
     "@ngneat/spectator": "^10.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
