--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@angular/compiler-cli": "~13.0.0",
     "@ngneat/spectator": "^10.0.1",
     "@types/jasmine": "~3.10.0",
+    "@types/jest": "^28.1.2",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "eslint": "^8.18.0",
