--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,9 +5,8 @@
     "outDir": "./out-tsc/spec",
     "types": ["jest"]
   },
-  "files": [
-    "setup-test.ts",
-    "src/polyfills.ts"
-  ],
+  "esModuleInterop": true,
+  "emitDecoratorMetadata": true,
+  "files": ["setup-test.ts", "src/polyfills.ts"],
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
 }
