--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@datorama/akita": "^7.1.1",
+    "@datorama/akita-ng-entity-service": "^7.0.0",
     "@datorama/akita-ngdevtools": "^7.0.0",
     "@taiga-ui/cdk": "^2.50.0",
     "@taiga-ui/core": "^2.50.0",
