--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jest": "^28.1.1",
     "jest-preset-angular": "^12.1.0",
     "lint-staged": "^13.0.2",
+    "ng-mocks": "^14.0.1",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "typescript": "~4.4.3"
