refactor: 💡 Displaying data as table

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "lint": "ng lint --fix",
     "prepare": "husky install",
     "prettier:check": "prettier --config ../wefox/.prettierrc --write  --check .",
-    "postinstall": "ngcc --async",
     "commit": "npx git-cz"
   },
   "config": {
@@ -30,6 +29,7 @@
     "@angular-eslint/eslint-plugin": "^13.5.0",
     "@angular-eslint/template-parser": "^13.5.0",
     "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
@@ -38,18 +38,20 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@datorama/akita": "^7.1.1",
-    "@datorama/akita-ng-entity-service": "^7.0.0",
-    "@datorama/akita-ngdevtools": "^7.0.0",
-    "@taiga-ui/cdk": "^2.50.0",
-    "@taiga-ui/core": "^2.50.0",
-    "@taiga-ui/icons": "^2.50.0",
-    "@taiga-ui/kit": "^2.50.0",
+    "@datorama/akita-ng-entity-service": "^6.2.0",
+    "@datorama/akita-ngdevtools": "^6.0.1",
+    "@ng-web-apis/mutation-observer": "^1.1.0",
+    "@taiga-ui/addon-table": "^2.51.0",
+    "@taiga-ui/cdk": "^2.51.0",
+    "@taiga-ui/core": "^2.51.0",
+    "@taiga-ui/icons": "^2.51.0",
+    "@taiga-ui/kit": "^2.51.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
+    "@angular-devkit/build-angular": "^13.3.8",
     "@angular-eslint/eslint-plugin-template": "^13.5.0",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
