--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,15 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy Multiple Docker Images to Heroku Apps
-        uses: snithyanantham/docker-compose-multiple-apps-heroku-deploy@v1.0
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
+        uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
-          api_key: ${{ secrets.HEROKU_API_KEY }}
-          app_name: ${{ secrets.HEROKU_APP_NAME }}
-          docker_compose_file: './docker-compose.yml'
-          heroku_apps: '[{"imagename":"nginx-frontend","appname":"wefox-post-manager ","apptype":"web"}, {"imagename":"backend","appname":"wg-web-challenge ","apptype":"web"}]'
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          dockerfile_directory: ./
+          dockerfile_name: Dockerfile
+          docker_options: '--no-cache'
+          process_type: web
