--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Build & publish project
 on:
   push:
-    branches: [main]
+    branches: ["main" ]
   pull_request:
-    branches: [main]
+    branches: ["main" ]
 
 jobs:
   build:
