--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@datorama/akita": "^7.1.1",
     "@datorama/akita-ng-entity-service": "^6.2.0",
     "@datorama/akita-ngdevtools": "^6.0.1",
