--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wefox-post-manager",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "authors": [
     "Piotr Mieszczak <mieszczak.piotr@gmail.com>"
   ],
@@ -14,7 +14,8 @@
     "prepare": "husky install",
     "prettier:check": "prettier --config ../wefox/.prettierrc --write  --check .",
     "commit": "npx git-cz",
-    "postinstall": "ngcc --async"
+    "postinstall": "ngcc --async",
+    "release": "standard-version"
   },
   "config": {
     "commitizen": {
@@ -76,6 +77,7 @@
     "ng-mocks": "^14.0.1",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
+    "standard-version": "^9.5.0",
     "typescript": "~4.4.3"
   }
 }
